frontend/test/should_fail/basic_061.grg
using basic_model_002;

rule r {
	x : A;
	y : B;
	z : C;

	replace {
		eval {
			z.ic = 42;
		}
	}
}

